Add basic Calendar Components.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "react-scripts": "0.2.1"
   },
   "dependencies": {
+    "calendar": "^0.1.0",
+    "classnames": "^2.2.5",
+    "moment": "^2.14.1",
+    "normalize.css": "^4.2.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   },
