--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "dependencies": {
     "calendar": "^0.1.0",
     "classnames": "^2.2.5",
+    "lodash": "^4.15.0",
     "moment": "^2.14.1",
     "normalize.css": "^4.2.0",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-saga": "^0.11.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
